--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://kit.fontawesome.com/d75648a93d.js" crossorigin="anonymous"></script>
+
   <style>
-    html, body {
+    html,
+    body {
       height: 100%;
     }
   </style>
